--- a/DBTool/.classpath
+++ b/DBTool/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="Jars/log4j-1.2.13.jar"/>
+	<classpathentry kind="lib" path="Jars/commons-lang-2.3.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
